Corrected spacing on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,15 @@ li {
 }
 
 #guessOutcome {
-  font-size: 18pt;
+  font-size: 16pt;
   font-weight: 400;
-  padding-left: 20%;
-  padding-right: 19%;
+  padding-left: 15%;
+  padding-right: 3%;
+  margin-left: 5%;
+  margin-right: 15%
 }
 
 #gameCount {
-  font-size: 18pt;
+  font-size: 16pt;
   font-weight: 400;
 }
